--- a/modules/skparagraph/skparagraph.gni
+++ b/modules/skparagraph/skparagraph.gni
@@ -22,6 +22,7 @@ skparagraph_public = [
   "$_modules/skparagraph/include/Paragraph.h",
   "$_modules/skparagraph/include/ParagraphBuilder.h",
   "$_modules/skparagraph/include/ParagraphCache.h",
+  "$_modules/skparagraph/include/ParagraphLineFetcher.h",
   "$_modules/skparagraph/include/ParagraphPainter.h",
   "$_modules/skparagraph/include/ParagraphStyle.h",
   "$_modules/skparagraph/include/TextShadow.h",
@@ -46,6 +47,8 @@ skparagraph_sources = [
   "$_modules/skparagraph/src/ParagraphCache.cpp",
   "$_modules/skparagraph/src/ParagraphImpl.cpp",
   "$_modules/skparagraph/src/ParagraphImpl.h",
+  "$_modules/skparagraph/src/ParagraphLineFetcherImpl.cpp",
+  "$_modules/skparagraph/src/ParagraphLineFetcherImpl.h",
   "$_modules/skparagraph/src/ParagraphPainterImpl.cpp",
   "$_modules/skparagraph/src/ParagraphPainterImpl.h",
   "$_modules/skparagraph/src/ParagraphStyle.cpp",
