font descriptor code
Signed-off-by: changleipeng <changleipeng4@huawei.com>
Change-Id: Ibda84cd6610ba9e4c6956a5e4147974d0d4ef8e6

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -74,7 +74,10 @@ config("skia_wno") {
 # Skia public API, generally provided by :skia.
 config("skia_public") {
   include_dirs = [ "." ]
-  defines = [ "NEW_SKIA" ]
+  defines = [
+    "NEW_SKIA",
+    "OHOS_SUPPORT",
+  ]
   if (defined(skia_ohos_debug) && skia_ohos_debug) {
     defines += [ "SKIA_OHOS_DEBUG" ]
   }
