add ohos skia always trace tag
Signed-off-by: yexiandong <yexiandong@huawei.com>
Change-Id: I9403da6afcb17e1470d0b4d107b7ab720756f982

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1174,7 +1174,6 @@ optional("gpu") {
       if (use_oh_skia) {
         external_deps = [
           "egl:libEGL",
-          "hitrace:hitrace_meter",
           "opengles:libGLES",
         ]
         external_deps += [
@@ -1322,7 +1321,10 @@ optional("gpu") {
   }
 
   if (is_ohos) {
-    external_deps += [ "hilog:libhilog" ]
+    external_deps += [
+      "hilog:libhilog",
+      "hitrace:hitrace_meter",
+    ]
   }
 }
 
