新增楷体字体
Signed-off-by: 张子明 <zhangziming10@huawei.com>

--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -1259,6 +1259,12 @@
     },
     {
       "书宋-简": "ShuS-SC.ttf"
+    },
+    {
+      "KaiT-SC": "KaiT-SC.ttf"
+    },
+    {
+      "楷体-简": "KaiT-SC.ttf"
     }
   ]
 }
