--- a/gn/gpu.gni
+++ b/gn/gpu.gni
@@ -633,8 +633,8 @@ skia_vk_sources = [
   "$_src/gpu/vk/GrVkManagedResource.h",
   "$_src/gpu/vk/GrVkMemory.cpp",
   "$_src/gpu/vk/GrVkMemory.h",
-  "$_src/gpu/vk/GrVkMemoryReclaimer.cpp", # OH ISSUE: asyn memory reclaimer
-  "$_src/gpu/vk/GrVkMemoryReclaimer.h",   # OH ISSUE: asyn memory reclaimer
+  "$_src/gpu/vk/GrVkMemoryReclaimer.cpp",
+  "$_src/gpu/vk/GrVkMemoryReclaimer.h",
   "$_src/gpu/vk/GrVkOpsRenderPass.cpp",
   "$_src/gpu/vk/GrVkOpsRenderPass.h",
   "$_src/gpu/vk/GrVkPipeline.cpp",
