Revert "!703 font descriptor code"
This reverts commit 52d69f6fedd584f00bd68ee297186fe2e412600a, reversing
changes made to f670b9741ab39e6bdfae49afa744ed812ff5e441.

Change-Id: I2b686b08e83d952f78430bc53cd272092621d2fb
Signed-off-by: changleipeng <changleipeng4@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -74,10 +74,7 @@ config("skia_wno") {
 # Skia public API, generally provided by :skia.
 config("skia_public") {
   include_dirs = [ "." ]
-  defines = [
-    "NEW_SKIA",
-    "OHOS_SUPPORT",
-  ]
+  defines = [ "NEW_SKIA" ]
   if (defined(skia_ohos_debug) && skia_ohos_debug) {
     defines += [ "SKIA_OHOS_DEBUG" ]
   }
