--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2031,6 +2031,7 @@ if (use_oh_skia) {
         "hitrace:hitrace_meter",
         "init:libbegetutil",
       ]
+      defines += [ "SK_ENABLE_SDF_BLUR_SWITCH" ]
       defines += [ "SK_ENABLE_PATH_COMPLEXITY_DFX" ]
     }
 
