--- a/BUILD.gn
+++ b/BUILD.gn
@@ -93,6 +93,7 @@ config("skia_public") {
       "SKIA_DFX_FOR_OHOS",
     ]
   }
+  defines += [ "OHOS_SUPPORT" ]
   defines += [ "SKIA_OPTION_UNCLAMPED_COLOR_MATRIX_FILTER" ]
   cflags_objcc = []
   if (is_skia_dev_build) {
@@ -1531,6 +1532,12 @@ optional("typeface_freetype") {
   }
 
   deps = [ "${skia_third_party_dir}/freetype2" ]
+  if (defined(external_deps)) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps = [ "bounds_checking_function:libsec_shared" ]
+  }
+
   sources = [
     "src/ports/SkFontHost_FreeType.cpp",
     "src/ports/SkFontHost_FreeType_common.cpp",
