--- a/gn/oh_skia.gni
+++ b/gn/oh_skia.gni
@@ -12,12 +12,13 @@
 # limitations under the License.
 
 import("//build/ohos_var.gni")
-import("//foundation/graphic/graphic_2d/graphic_config.gni")
 
 declare_args() {
   skia_feature_product = "default"
   skia_feature_enable_pgo = false
   skia_feature_pgo_path = ""
+  skia_feature_wuji_enable = false
+  skia_feature_ace_enable_gpu = true
 }
 
 skia_common_defines = [
@@ -81,4 +82,17 @@ declare_args() {
   skia_use_freetype2 = true
   is_skia_component_build = false
   skia_feature_zlib = ""
+}
+
+use_mingw_win = "${current_os}_${current_cpu}" == "mingw_x86_64"
+use_mac = "${current_os}_${current_cpu}" == "mac_x64" ||
+          "${current_os}_${current_cpu}" == "mac_arm64"
+use_ios = "${current_os}_${current_cpu}" == "ios_x64" ||
+          "${current_os}_${current_cpu}" == "ios_arm64"
+use_linux = "${current_os}_${current_cpu}" == "linux_x64"
+
+if (skia_feature_ace_enable_gpu) {
+  ace_enable_gpu = true
+} else {
+  ace_enable_gpu = false
 }
