--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -33,6 +33,26 @@
         {
           "weight": 200, "to": 900
         }
+      ],
+      "variation": [
+        {
+          "weight": 100, "wght": 100
+        },
+        {
+          "weight": 300, "wght": 247
+        },
+        {
+          "weight": 400, "wght": 400
+        },
+        {
+          "weight": 500, "wght": 500
+        },
+        {
+          "weight": 700, "wght": 706
+        },
+        {
+          "weight": 900, "wght": 844
+        }
       ]
     },
     {
@@ -40,6 +60,26 @@
       "alias": [
         {
           "HarmonyOS-Sans-Condensed": 0
+        }
+      ],
+      "variation": [
+        {
+          "weight": 100, "wght": 100
+        },
+        {
+          "weight": 300, "wght": 247
+        },
+        {
+          "weight": 400, "wght": 400
+        },
+        {
+          "weight": 500, "wght": 500
+        },
+        {
+          "weight": 700, "wght": 706
+        },
+        {
+          "weight": 900, "wght": 844
         }
       ]
     },
@@ -78,7 +118,27 @@
           "": "Noto Sans"
         },
         {
-          "und-Arab": "HarmonyOS Sans Naskh Arabic UI"
+          "und-Arab": "HarmonyOS Sans Naskh Arabic UI",
+          "variation": [
+            {
+              "weight": 100, "wght": 100
+            },
+            {
+              "weight": 300, "wght": 247
+            },
+            {
+              "weight": 400, "wght": 400
+            },
+            {
+              "weight": 500, "wght": 500
+            },
+            {
+              "weight": 700, "wght": 706
+            },
+            {
+              "weight": 900, "wght": 844
+            }
+          ]
         },
         {
           "und-Ethi": "Noto Sans Ethiopic"
@@ -336,10 +396,53 @@
           "und-Vaii": "Noto Sans Vai"
         },
         {
-          "zh-Hans": "HarmonyOS Sans SC"
+          "zh-Hans": "HarmonyOS Sans SC",
+          "variation": [
+            {
+              "weight": 100, "wght": 100
+            },
+            {
+              "weight": 300, "wght": 247
+            },
+            {
+              "weight": 400, "wght": 400
+            },
+            {
+              "weight": 500, "wght": 500
+            },
+            {
+              "weight": 600, "wght": 603
+            },
+            {
+              "weight": 700, "wght": 706
+            },
+            {
+              "weight": 900, "wght": 844
+            }
+          ]
         },
         {
-          "zh-Hant": "HarmonyOS Sans TC"
+          "zh-Hant": "HarmonyOS Sans TC",
+          "variation": [
+            {
+              "weight": 100, "wght": 100
+            },
+            {
+              "weight": 300, "wght": 247
+            },
+            {
+              "weight": 400, "wght": 400
+            },
+            {
+              "weight": 500, "wght": 500
+            },
+            {
+              "weight": 700, "wght": 706
+            },
+            {
+              "weight": 900, "wght": 844
+            }
+          ]
         },
         {
           "ja": "Noto Sans CJK JP"
