--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -575,29 +575,29 @@
         },
         {
           "und-Math": "Noto Sans Math"
+        },
+        {
+          "und-Zmth": "DejaVu Math TeX Gyre"
+        },
+        {
+          "und-Zsym": "FTSymbol"
+        },
+        {
+          "und-Zsym": "FTToken"
+        },
+        {
+          "und-Zsym": "FTToken2"
+        },
+        {
+          "und-Zsym": "FTToken3"
+        },
+        {
+          "und-Zsym": "FTTokens"
         }
       ]
     }
   ],
   "font_file_map" : [
-    {
-      "DejaVuMathTeXGyre-Regular": "DejaVuMathTeXGyre.ttf"
-    },
-    {
-      "FTSymbol": "FTSymbol.ttf"
-    },
-    {
-      "FTToken": "FTToken.ttf"
-    },
-    {
-      "FTToken2": "FTToken2.ttf"
-    },
-    {
-      "FTToken3": "FTToken3.ttf"
-    },
-    {
-      "FTTokens": "FTTokens.ttf"
-    },
     {
       "方正仿宋-简": "FZFangS-SC.ttf"
     },
