fix: fontconfig.json key 顺序调整，适配顺序遍历的解析逻辑
Signed-off-by: luhan <luhan22@huawei.com>
Change-Id: I4572678c960bb3377e753d256bd8b9100d6748db

--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -118,7 +118,6 @@
           "": "Noto Sans"
         },
         {
-          "und-Arab": "HarmonyOS Sans Naskh Arabic UI",
           "font-variations": [
             {
               "weight": 100, "wght": 100
@@ -138,7 +137,8 @@
             {
               "weight": 900, "wght": 844
             }
-          ]
+          ],
+          "und-Arab": "HarmonyOS Sans Naskh Arabic UI"
         },
         {
           "und-Ethi": "Noto Sans Ethiopic"
@@ -396,7 +396,6 @@
           "und-Vaii": "Noto Sans Vai"
         },
         {
-          "zh-Hans": "HarmonyOS Sans SC",
           "font-variations": [
             {
               "weight": 100, "wght": 100
@@ -419,10 +418,10 @@
             {
               "weight": 900, "wght": 844
             }
-          ]
+          ],
+          "zh-Hans": "HarmonyOS Sans SC"
         },
         {
-          "zh-Hant": "HarmonyOS Sans TC",
           "font-variations": [
             {
               "weight": 100, "wght": 100
@@ -442,7 +441,8 @@
             {
               "weight": 900, "wght": 844
             }
-          ]
+          ],
+          "zh-Hant": "HarmonyOS Sans TC"
         },
         {
           "ja": "Noto Sans CJK JP"
