--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1434,7 +1434,7 @@ optional("pdf") {
   public_defines = [ "SK_SUPPORT_PDF" ]
   deps = []
   external_deps = []
-  if (use_oh_skia) {
+  if (is_mingw) {
     external_deps += [ "zlib:libz" ]
   } else {
     if (skia_feature_zlib != "") {
