--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -695,7 +695,7 @@
       "方正手書-繁": "FZShouS-TC.ttf"
     },
     {
-      "方正手書-繁": "FZShouS-TC.ttf"
+      "FZShouS-TC": "FZShouS-TC.ttf"
     },
     {
       "方正书宋-简": "FZShuS-SC.ttf"
@@ -731,7 +731,7 @@
       "方正行楷-繁": "FZXingK-TC.ttf"
     },
     {
-      "方正行楷-繁": "FZXingK-TC.ttf"
+      "FZXingK-TC": "FZXingK-TC.ttf"
     },
     {
       "FZYuanT-SC Bold": "FZYuanT-SC-Bold.ttf"
