--- a/BUILD.gn
+++ b/BUILD.gn
@@ -838,11 +838,7 @@ if (use_oh_skia && !is_arkui_x) {
     if (skia_feature_wuji_enable) {
       deps += [ "$ace_graphic_ext:ohos_fonts_wuji" ]
     } else if (skia_enable_standard_fonts) {
-      deps += [
-        "//base/global/system_resources:ohos_fonts",
-        "//third_party/noto-cjk:fonts_notocjk",
-        "//third_party/notofonts:fonts_notofonts",
-      ]
+      deps += []
     }
 
     if (use_mingw_win) {
