--- a/BUILD.gn
+++ b/BUILD.gn
@@ -91,6 +91,7 @@ config("skia_public") {
       "SKIA_DFX_FOR_OHOS",
     ]
   }
+  defines += [ "OHOS_SUPPORT" ]
   cflags_objcc = []
   if (is_skia_dev_build) {
     defines += [ "GR_TEST_UTILS=1" ]
