调整异步线程优先级
Signed-off-by: 猫科龙 <chenjinglong1@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1335,6 +1335,7 @@ optional("gpu") {
     external_deps += [
       "hilog:libhilog",
       "hitrace:hitrace_meter",
+      "resource_schedule_service:ressched_client",
     ]
   }
 }
@@ -2070,6 +2071,7 @@ if (use_oh_skia) {
         "hilog:libhilog",
         "hitrace:hitrace_meter",
         "init:libbegetutil",
+        "resource_schedule_service:ressched_client",
       ]
       defines += [ "SK_ENABLE_SDF_BLUR_SWITCH" ]
       defines += [ "SK_ENABLE_PATH_COMPLEXITY_DFX" ]
