--- a/BUILD.gn
+++ b/BUILD.gn
@@ -92,6 +92,7 @@ config("skia_public") {
       "SKIA_OHOS_FOR_OHOS_TRACE",
       "SKIA_OHOS_FOR_OHOS_LOG",
       "SKIA_OHOS_SHADER_REDUCE",
+      "SKIA_OHOS_TEXTURE_MEM_MGMT",
       "SKIA_DFX_FOR_OHOS",
     ]
   }
