--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1653,6 +1653,7 @@ if (use_oh_skia) {
   template("make_skia_deps") {
     forward_variables_from(invoker, "*")
     ohos_source_set("skia_$platform") {
+      branch_protector_ret = "pac_ret"
       part_name = "skia"
       subsystem_name = "thirdparty"
       license_file = "//third_party/skia/LICENSE"
@@ -1870,6 +1871,7 @@ if (use_oh_skia) {
   }
 
   ohos_shared_library("skia_canvaskit") {
+    branch_protector_ret = "pac_ret"
     part_name = "skia"
     innerapi_tags = [ "platformsdk" ]
     subsystem_name = "thirdparty"
@@ -3291,6 +3293,7 @@ if (skia_enable_tools) {
 
   if (!is_win) {
     source_set("skqp_lib") {  # Not a skia_source_set
+      branch_protector_ret = "pac_ret"
       check_includes = false
       testonly = true
       public_configs = [ ":skia_private" ]
