record rsnode vkimage memory info
Signed-off-by: y30066316 <yanglusheng@h-partners.com>
Change-Id: I913a603e2ed706a17528aad79512f90bc17150f7

--- a/gn/gpu.gni
+++ b/gn/gpu.gni
@@ -599,6 +599,7 @@ skia_vk_sources = [
   "$_include/gpu/vk/GrVkMemoryAllocator.h",
   "$_include/gpu/vk/GrVkTypes.h",
   "$_include/gpu/vk/GrVkVulkan.h",
+  "$_include/gpu/vk/GrVulkanTracker.h",
   "$_include/private/GrVkTypesPriv.h",
   "$_src/gpu/vk/GrVkAMDMemoryAllocator.cpp",
   "$_src/gpu/vk/GrVkAMDMemoryAllocator.h",
@@ -671,6 +672,7 @@ skia_vk_sources = [
   "$_src/gpu/vk/GrVkUtil.h",
   "$_src/gpu/vk/GrVkVaryingHandler.cpp",
   "$_src/gpu/vk/GrVkVaryingHandler.h",
+  "$_src/gpu/vk/GrVulkanTracker.cpp",
 ]
 
 if (skia_vk_enable_partialrender) {
