--- a/BUILD.gn
+++ b/BUILD.gn
@@ -94,6 +94,7 @@ config("skia_public") {
       "SKIA_OHOS_SHADER_REDUCE",
       "SKIA_OHOS_TEXTURE_MEM_MGMT",
       "SKIA_DFX_FOR_OHOS",
+      "SKIA_DFX_FOR_RECORD_VKIMAGE",
     ]
   }
   defines += [ "OHOS_SUPPORT" ]
