--- a/src/ports/skia_ohos/config/fontconfig.json
+++ b/src/ports/skia_ohos/config/fontconfig.json
@@ -1391,10 +1391,10 @@
       "FZCuSong-B09S": "FZCSJW.ttf"
     },
     {
-      "方正粗宋简体": "FZZCHJW.ttf"
+      "方正粗宋简体": "FZCSJW.ttf"
     },
     {
-      "FZZHENGHEIS-B-GB": "FZZCHJW.ttf"
+      "FZZhengHeiS-B-GB": "FZZCHJW.ttf"
     },
     {
       "方正正粗黑简体": "FZZCHJW.ttf"
