remove unused weight
Signed-off-by: liufei <liufei225@h-partners.com>
Change-Id: Iede0c600313bba3eb3bc8dbb528de187f88eeb66

--- a/src/ports/skia_ohos/config/fontconfig_ohos.json
+++ b/src/ports/skia_ohos/config/fontconfig_ohos.json
@@ -13,8 +13,7 @@
       "type": 0,
       "alias": "HarmonyOS-Sans",
       "family": "HarmonyOS Sans",
-      "file": "HarmonyOS_Sans_Italic.ttf",
-      "weight": 400
+      "file": "HarmonyOS_Sans_Italic.ttf"
     },
     {
       "type": 0,
