字体引擎配置
Signed-off-by: liwei828 <1603466339@qq.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -561,6 +561,9 @@ optional("fontmgr_symbol_load") {
     ":ohos_fontconfig.json",
     ":ohos_fontconfig_old.json",
   ]
+  if (skia_feature_product == "wearable") {
+    deps += [ ":ohos_fontconfig_wearable.json" ]
+  }
   public = [ "src/ports/skia_ohos/HmSymbolConfig_ohos.h" ]
   sources = [ "src/ports/skia_ohos/HmSymbolConfig_ohos.cpp" ]
 }
@@ -814,6 +817,13 @@ if (use_oh_skia && !is_arkui_x) {
     subsystem_name = "thirdparty"
   }
 
+  ohos_prebuilt_etc("ohos_fontconfig_wearable.json") {
+    source = "//third_party/skia/src/ports/skia_ohos/config/fontconfig_ohos_wearable.json"
+    output = "fontconfig_ohos.json"
+    part_name = "skia"
+    subsystem_name = "thirdparty"
+  }
+
   optional("fontmgr_ohos") {
     enabled = skia_enable_fontmgr_ohos
 
@@ -857,6 +867,9 @@ if (use_oh_skia && !is_arkui_x) {
       ":ohos_fontconfig.json",
       ":ohos_fontconfig_old.json",
     ]
+    if (skia_feature_product == "wearable") {
+      deps += [ ":ohos_fontconfig_wearable.json" ]
+    }
 
     if (skia_feature_wuji_enable) {
       deps += [ "$ace_graphic_ext:ohos_fonts_wuji" ]
