--- a/BUILD.gn
+++ b/BUILD.gn
@@ -95,6 +95,7 @@ config("skia_public") {
       "SKIA_OHOS_TEXTURE_MEM_MGMT",
       "SKIA_DFX_FOR_OHOS",
       "SKIA_DFX_FOR_RECORD_VKIMAGE",
+      "SKIA_OHOS_SINGLE_OWNER",
     ]
   }
   defines += [ "OHOS_SUPPORT" ]
@@ -2107,6 +2108,7 @@ if (use_oh_skia) {
       sources += [ "//third_party/skia/src/ports/SkDebug_ohos.cpp" ]
       external_deps = [
         "bounds_checking_function:libsec_shared",
+        "faultloggerd:libbacktrace_local",
         "hilog:libhilog",
         "hitrace:hitrace_meter",
         "init:libbegetutil",
