--- a/BUILD.gn
+++ b/BUILD.gn
@@ -93,6 +93,7 @@ config("skia_public") {
       "SKIA_OHOS_TEXTURE_MEM_MGMT",
       "SKIA_DFX_FOR_OHOS",
       "SKIA_DFX_FOR_RECORD_VKIMAGE",
+      "SKIA_DFX_FOR_GPURESOURCE_CORETRACE",
       "SKIA_OHOS_SINGLE_OWNER",
     ]
   }
