--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2113,6 +2113,7 @@ if (use_oh_skia) {
       ]
       defines += [ "SK_ENABLE_SDF_BLUR_SWITCH" ]
       defines += [ "SK_ENABLE_PATH_COMPLEXITY_DFX" ]
+      defines += [ "SK_ENABLE_STENCIL_CULLING_OHOS" ]
     }
 
     if (is_android) {
