--- a/BUILD.gn
+++ b/BUILD.gn
@@ -166,6 +166,9 @@ config("skia_public") {
     defines += [ "TURBO_JPEG_HUFF_DECODE_OPT" ]
     defines += [ "TURBO_PNG_MULTY_LINE_OPT" ]
   }
+  if (is_ohos) {
+    defines += [ "SK_ENABLE_STENCIL_CULLING_OHOS" ]
+  }
 }
 
 # Skia internal APIs, used by Skia itself and a few test tools.
