新增三级生僻字
Signed-off-by: @ran-zhao-yu <ranzhaoyu1@huawei.com>

--- a/src/ports/skia_ohos/config/fontconfig_ohos.json
+++ b/src/ports/skia_ohos/config/fontconfig_ohos.json
@@ -886,6 +886,12 @@
       "lang": "und-Math",
       "family": "Noto Sans Math",
       "file": "NotoSansMath-Regular.ttf"
+    },
+    {
+      "type": 1,
+      "lang": "zh-Hans",
+      "family": "HYQiHei L3",
+      "file": "HYQiHeiL3.ttf"
     }
   ]
 }
